# python-gcp-logger

./: README.md  pyproject.toml
src/surquest/GCP/logger/: json_encoder.py  logger.py
test/logger/: test_logger.py
